use metable apis for device data
